--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 		<div class="main-content">
 		<!--About user-->
 		<div class="about">
-		   <h2 class="about-position">HR / Recruiter</h2>
+		   <h2 class="about-position">Recruiter</h2>
 			<h1 class="about-name">Rostyslav Osinchuk</h1>
         <p class="about-description">
-			Energetic and communicative specialist with experience in HR and recruiting,<br>results-oriented. Possess skills in effectively sourcing and attracting talented candidates, conducting interviews, and assessing professional competencies. Experienced with recruitment tools, CRM systems, and databases. Have a clear understanding of business needs and strive to attract the best professionals to achieve the company’s strategic goals. Skilled in building trusting relationships with candidates and employees, contributing to the development of corporate culture. Eager to grow in a dynamic HR environment and enhance professional skills.
+			Energetic and communicative specialist with HR and recruiting experience,
+         result oriented. I have the skills of effective search and attraction of talented candidates, conducting interviews, assessment of professional competences. Experience with recruitment tools, CRM systems and databases. I have a clear understanding of business needs and strive to attract the best professionals to achieve the company's strategic goals. I am able to build trusting relationships with candidates and employees, contributing to the development of corporate culture. Willingness to develop in a dynamic HR environment and improve professional skills.
 				</p>
 			</div>
 		
