--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 		   <h2 class="about-position">Trainee Linkbuilder</h2>
 			<h1 class="about-name">Rostyslav Osinchuk</h1>
         <p class="about-description">
-			Energetic and communicative specialist with HR and recruiting experience,
-         result oriented. I have the skills of effective search and attraction of talented candidates, conducting interviews, assessment of professional competences. Experience with recruitment tools, CRM systems and databases. I have a clear understanding of business needs and strive to attract the best professionals to achieve the company's strategic goals. I am able to build trusting relationships with candidates and employees, contributing to the development of corporate culture. Willingness to develop in a dynamic HR environment and improve professional skills.
+			<!-- Energetic and communicative specialist with HR and recruiting experience,
+         result oriented. I have the skills of effective search and attraction of talented candidates, conducting interviews, assessment of professional competences. Experience with recruitment tools, CRM systems and databases. I have a clear understanding of business needs and strive to attract the best professionals to achieve the company's strategic goals. I am able to build trusting relationships with candidates and employees, contributing to the development of corporate culture. Willingness to develop in a dynamic HR environment and improve professional skills. -->
+			A motivated candidate for the Trainee Linkbuilder position, seeking an opportunity to start a career in SEO and link building. Although I have no prior experience in this field, I am eager to learn and develop my skills, applying them in practice. I quickly grasp new information, am detail-oriented, and capable of working effectively within a team.
+
+
 				</p>
 			</div>
 		
