--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="main-content">
 		<!--About user-->
 		<div class="about">
-		   <h2 class="about-position">Trainee Linkbuilder</h2>
+		   <!-- <h2 class="about-position">Trainee Linkbuilder</h2> -->
 			<h1 class="about-name">Rostyslav Osinchuk</h1>
         <p class="about-description">
 			<!-- Energetic and communicative specialist with HR and recruiting experience,
