--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 		  <div class="education">
 			<h3 class="title">Courses:</h3>
 			<!-- <p class="period">September 1999 - June 2004 <span class="line"> | </span> Country</p> -->
-			<h4 class="work-position"> Quality Assurance (QA) – Completed in 2021, Logos ;</h4>
-			<h4 class="work-position"> Fullstack Development – Completed in 2022, GoIT ;</h4>
-			<h4 class="work-position"> Digital Marketing – Completed in 2023, Google ;</h4>
-			<h4 class="work-position"> Lead Generation – Completed in 2024, Staffing Partner ;</h4>
+<!-- 			<h4 class="work-position"> Quality Assurance (QA) – Completed in 2021, Logos ;</h4> -->
+			<h4 class="work-position"> Fullstack Development – Completed in 2024, GoIT ;</h4>
+<!-- 			<h4 class="work-position"> Digital Marketing – Completed in 2023, Google ;</h4> -->
+<!-- 			<h4 class="work-position"> Lead Generation – Completed in 2024, Staffing Partner ;</h4> -->
 			</div>
 				
 			</div>
