--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						<ul class="tech-skills-list">
 							<li class="tech-skills-item"> <span class="tech-skills-text"> HTML5</span></li>
 							<li class="tech-skills-item"><span class="tech-skills-text">CSS3</span></li>
-							<li class="tech-skills-item"><span class="tech-skills-text">JavaScript</span></li>
+<!-- 							<li class="tech-skills-item"><span class="tech-skills-text">JavaScript</span></li> -->
 							<li class="tech-skills-item"><span class="tech-skills-text">Figma</span></li>
 							<li class="tech-skills-item"><span class="tech-skills-text">GIT</span></li>
 							<li class="tech-skills-item"><span class="tech-skills-text">CRM <!--notion,hubspote--></span></li>
